#feature/kapil_beta - Updated code with latest changes