@@ -1,489 +1,264 @@
 package org.team21.game.controllers;
 
-import java.util.*;
-import org.team21.game.interfaces.main_engine.GameFlowManager;
-import org.team21.game.interfaces.maps.MapEditor;
-import org.team21.game.models.map.Continent;
-import org.team21.game.models.map.Country;
+import org.team21.game.interfaces.GameManager;
 import org.team21.game.models.map.GameMap;
-import org.team21.game.models.game_play.GamePhase;
-import org.team21.game.utils.Constants;
-import org.team21.game.utils.logger.GameEventLogger;
-import org.team21.game.utils.validation.MapValidator;
-import org.team21.game.utils.validation.ValidationException;
+import org.team21.game.game_engine.GamePhase;
+import org.team21.game.utils.MapReader;
+import org.team21.game.utils.MapValidation;
+import org.team21.game.utils.ValidationException;
+import org.team21.game.utils.logger.LogEntryBuffer;
 
-
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Scanner;
+import java.util.stream.Collectors;
 
 /**
- * This class is used to create map through different commands for different operations.
- * @author Bharti Chhabra
+ * This class is used to create map using game console commands.
+ *
+ * @author Prathika Suvarna
+ * @author Neona Pinto
+ * @author Dhananjay Narayan
+ * @author Surya Manian
+ * @author Madhuvanthi Hemanathan
  * @version 1.0.0
  */
-public class MapEditorController implements MapEditor, GameFlowManager {
+public class MapEditorController implements GameManager {
     /**
      * A data member for scanner
      */
-    private final Scanner d_Sc = new Scanner(System.in);
-
+    private final Scanner SCANNER = new Scanner(System.in);
     /**
-     * A data member that stores map object
+     * A data member that stores the list of commands for mapeditor as list
      */
+    private final List<String> CLI_COMMANDS = Arrays.asList("editcontinent", "editcountry", "editneighbor", "showmap", "savemap", "editmap", "validatemap");
     GameMap d_GameMap;
+    GamePhase d_NextState = GamePhase.StartUp;
+    private LogEntryBuffer d_Logger = LogEntryBuffer.getInstance();
 
-    /**
-     * A data member that stores the list of commands used for editing,validating or saving a map
-     */
-    private final List<String> d_MAP_CLI_COMMANDS = Arrays.asList(Constants.SHOW_MAP,Constants.EDIT_MAP,Constants.EDIT_CONTINENT, Constants.EDIT_COUNTRY, Constants.EDIT_NEIGHBOUR,Constants.VALIDATE_MAP,Constants.SAVE_MAP);
-
-    /**
-     * A data member that will log the data for the class
-     */
-
-    /**
-     * A data member to set continue of loop
-     */
-    private static boolean d_Execute =true;
-
-    /**
-     * A data member to set status of editing phase
-     */
-    boolean d_EditStatus =false;
-    /**
-     * Created object  d_GameEventLogger of GameEventLogger.
-     */
-    GameEventLogger d_GameEventLogger = new GameEventLogger();
     /**
      * This is the default constructor
      */
-    public MapEditorController() { this.d_GameMap = GameMap.getInstance(); }
+    public MapEditorController() {
+        this.d_GameMap = GameMap.getInstance();
+    }
 
     /**
-     * This is the parametrised constructor
+     * The start method of MapEditor phase that handles creation, validation
+     * save of map from console commands.
      *
-     * @param p_GameMap Parameter of the GamePhase is passed
+     * @param p_GamePhase Parameter of the enum GamePhase is passed
+     * @throws ValidationException when validation fails
      */
-    public MapEditorController(GameMap p_GameMap) { this.d_GameMap = p_GameMap; }
+    @Override
+    public GamePhase start(GamePhase p_GamePhase) throws ValidationException, IOException {
+        d_Logger.clear();
+        d_Logger.log("/************************************ You are in MAP EDITOR PHASE *******************************/");
+        while (true) {
+            d_Logger.log("Enter your map operation:" + "\n" + "1. Enter help to view the set of commands" + "\n" + "2. Enter exit to end map creation and save phase");
+            d_Logger.log("-----------------------------------------------------------------------------------------");
+            String l_Input = SCANNER.nextLine();
+            List<String> l_InputList;
+            if (l_Input.contains("-")) {
+                l_InputList = Arrays.stream(l_Input.split("-"))
+                        .filter(s -> !s.isEmpty())
+                        .map(String::trim)
+                        .collect(Collectors.toList());
+            } else {
+                l_InputList = Arrays.stream(l_Input.split(" ")).collect(Collectors.toList());
+            }
 
-    /**
-     * This run method of MapEditor phase handles editing on map
-     **/
-
-    static{
-        System.out.println(Constants.WELCOME_MESSAGE_MAP_EDITOR);
-        System.out.println(Constants.ASK_FOR_ACTION + "\n" );
-        System.out.println(Constants.HELP_COMMAND + "\n" );
-        System.out.println(Constants.EXIT_COMMAND + "\n");
-        System.out.println(Constants.SEPERATER);
-    }
-
-    /**
-     * Runs the game phase.
-     * @param p_CurrentPhase holds the current phase of the Game.
-     * @return : the startup phase of the Game.
-     * @throws Exception If an error occurs during the execution
-     */
-    public GamePhase run(GamePhase p_CurrentPhase) throws Exception{
-        List<String> l_ListStream;
-        while (d_Execute) {
-            l_ListStream=fetchUserInput();
-
-            // validating the input stream passed by user
-            boolean l_Valid=validateUserInput(l_ListStream);
-            if (!l_Valid) {
-                if (!(l_ListStream.getFirst().startsWith("help")) && !(l_ListStream.getFirst().startsWith("exit"))) {
-                    System.out.println("Invalid Input,Try Again !");
-                    run(p_CurrentPhase);
-                }
-                else if(l_ListStream.getFirst().startsWith("exit")) {
-                    d_Execute =false;
-                    return p_CurrentPhase.nextState(GamePhase.StartUp);
-                }
-                else if(l_ListStream.getFirst().startsWith("help")){
-                    //list of commands to assist user
-                    System.out.println("Commands List for different operations:");
-                    System.out.println(Constants.SEPERATER);
-                    System.out.println("To edit map file  : editmap filename");
-                    System.out.println(Constants.SEPERATER);
-                    System.out.println("To add or remove a continent : editcontinent -add continentID continentvalue -remove continentID {example: editcontinent -add Asia 10 or editcontinent -remove Asia}");
-                    System.out.println("To add or remove a country : editcountry -add countryID continentID -remove countryID {example: editcountry -add India Asia or editcountry -remove India }");
-                    System.out.println("To add or remove a neighbor to a country : editneighbor -add countryID neighborcountryID -remove countryID neighborcountryID {example: editneighbor -add India Pakistan or editneighbor -remove India Pakistan}");
-                    System.out.println(Constants.SEPERATER);
-                    System.out.println("To save map file : savemap filename {example: savemap Canada}");
-                    System.out.println(Constants.SEPERATER);
-                    System.out.println("Additional map commands:");
-                    System.out.println("To show the map: showmap {example: showmap}");
-                    System.out.println("To validate map: validatemap {example: validatemap}");
-                    System.out.println(Constants.SEPERATER);
+            if (!inputValidator(l_InputList)) {
+                if (l_Input.startsWith("exit")) {
+                    l_InputList.add(0, "exit");
+                } else {
+                    l_InputList.clear();
+                    // if not available in command list forcing to call help
+                    l_InputList.add("help");
+                    l_InputList.add("dummy");
                 }
             }
-            else{
-                if(l_ListStream.get(0).equals(Constants.SHOW_MAP)|| l_ListStream.get(0).equals(Constants.VALIDATE_MAP)||l_ListStream.get(0).equals(Constants.SAVE_MAP)||l_ListStream.get(0).equals(Constants.EDIT_MAP))
-                    action(l_ListStream,p_CurrentPhase);
-                else if(l_ListStream.get(1).split(" ").length>=2){
-                    String l_CommandOperation=l_ListStream.get(1).split(" ")[0];
-                    if(l_CommandOperation.equals(Constants.ADD)|| l_CommandOperation.equals(Constants.REMOVE))
-                        action(l_ListStream,p_CurrentPhase);
-                }
-                else
-                    System.out.println("Invalid Command,Check Again!");
-            }
-        }
-        return p_CurrentPhase.nextState(GamePhase.StartUp);
-    }
 
+            /**
+             * Handle editcontinent command from console
+             */
 
-    public GamePhase action(List<String> p_ListStream,GamePhase p_CurrentGamePhase) {
-        for(int l_Index=0;l_Index<p_ListStream.size();l_Index++) {
-            String[] l_CommandsArray = p_ListStream.get(l_Index).split(" ");
-            switch (p_ListStream.getFirst().toLowerCase()) {
-
-                // command to showcase map
-                case Constants.SHOW_MAP: {
-                    ShowMapController l_ShowMapController=new ShowMapController(d_GameMap);
-                    l_ShowMapController.show();
-                    break;
-                }
-
-                // command to editmap
-                case Constants.EDIT_MAP: {
-                    if (!Objects.equals(l_CommandsArray[0], "editmap")) {
-                        if(new MapLoaderController().readMap(l_CommandsArray[0]).getMapName().toLowerCase() == l_CommandsArray[0].toLowerCase()){
-                            this.d_GameMap = GameMap.getInstance();
-                        }else {
-                            this.d_GameMap = new GameMap();
-                            System.out.println("No Map with the given Name Found so intialising a new one");
+            String l_MainCommand = l_InputList.get(0);
+            l_InputList.remove(l_MainCommand);
+            for (String l_Command : l_InputList) {
+                String[] l_CommandArray = l_Command.split(" ");
+                switch (l_MainCommand.toLowerCase()) {
+                    case "editcontinent": {
+                        if (l_CommandArray.length > 0) {
+                            switch (l_CommandArray[0]) {
+                                case "add": {
+                                    if (l_CommandArray.length == 3) {
+                                        d_GameMap.addContinent(l_CommandArray[1], l_CommandArray[2]);
+                                    } else {
+                                        throw new ValidationException();
+                                    }
+                                    break;
+                                }
+                                case "remove": {
+                                    if (l_CommandArray.length == 2) {
+                                        d_GameMap.removeContinent(l_CommandArray[1]);
+                                    } else {
+                                        throw new ValidationException();
+                                    }
+                                    break;
+                                }
+                            }
                         }
-                        d_EditStatus =true;
                         break;
                     }
-                    break;
-                }
 
-                //command to edit country in map
-                case Constants.EDIT_COUNTRY: {
-                    switch (l_CommandsArray[0]) {
-                        case Constants.ADD: {
-                            if (l_CommandsArray.length == 3) {
-                                try {
-                                    HashMap<String, Country> l_Countries = d_GameMap.getCountries();
-                                    if (l_Countries.containsKey(l_CommandsArray[1].toLowerCase())) {
-                                        try {
-                                            throw new ValidationException("Provided country already exist in a map.Try Again with different country !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else {
-                                        Country l_Country = new Country(l_CommandsArray[1], l_CommandsArray[2]);
-                                        d_GameMap.getContinents().get(l_CommandsArray[2].toLowerCase()).getCountries().put(l_CommandsArray[1].toLowerCase(), l_Country);
-                                        d_GameMap.getCountries().put(l_CommandsArray[1].toLowerCase(), l_Country);
-                                        System.out.println("Country " + l_CommandsArray[1] + " is successfullY added .");
-                                        d_EditStatus = true;
-                                    }
-                                } catch (Exception e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            } else {
-                                try {
-                                    throw new ValidationException();
-                                } catch (ValidationException e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            }
-                            break;
-                        }
-                        case Constants.REMOVE: {
-                            if (l_CommandsArray.length == 2) {
-                                
-                                try {
-                                    Country l_Country = d_GameMap.getCountries().get(l_CommandsArray[1].toLowerCase());
-                                    //handling null values
-                                    if (l_Country == null) {
-                                        try {
-                                            throw new ValidationException("Provided country does not exist.Try Again with valid country ! ");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else {
-                                        Collection<Country> l_Values = l_Country.getNeighbours().values();
-                                        Country[] l_Neighbour = l_Values.toArray(new Country[l_Values.size()]);
-                                        for (int l_Position = 0; l_Position < l_Neighbour.length; l_Position++) {
-                                            if (l_Neighbour[l_Position].getNeighbours().containsKey(l_Country.getCountryId().toLowerCase()) && l_Country.getNeighbours().containsKey(l_Neighbour[l_Position].getCountryId().toLowerCase())) {
-                                                l_Neighbour[l_Position].getNeighbours().remove(l_Country.getCountryId().toLowerCase());
-                                                l_Country.getNeighbours().remove(l_Neighbour[l_Position].getCountryId().toLowerCase());
-                                            }
-                                        }
-                                        d_GameMap.getCountries().remove(l_CommandsArray[1].toLowerCase());
-                                        d_GameMap.getContinents().get(l_Country.getParentContinent().toLowerCase()).getCountries().remove(l_CommandsArray[1].toLowerCase());
+                    /**
+                     * Handle editcountry command from console
+                     */
 
-                                        System.out.println("Country " + l_CommandsArray[1] + " is successfullY removed .");
-                                        d_EditStatus = true;
-                                    }
-                                }catch (Exception e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            } else {
-                                try {
-                                    throw new ValidationException();
-                                } catch (ValidationException e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            }
-                            break;
-                        }
-                    }
-                    break;
-                }
-
-                // command to edit continent in map
-                case Constants.EDIT_CONTINENT: {
-                    if (l_CommandsArray.length > 0) {
-                        switch (l_CommandsArray[0]) {
-                            case Constants.ADD: {
-                                
-                                try {
-                                    HashMap<String, Continent> l_Continents = d_GameMap.getContinents();
-                                    if (l_CommandsArray.length == 3) {
-                                        if (l_CommandsArray[1] != null) {
-                                            if (l_Continents.containsKey(l_CommandsArray[1].toLowerCase())) {
-                                                try {
-                                                    throw new ValidationException("Provided continent already exists in map,Try again with different continent !");
-                                                } catch (ValidationException e) {
-                                                    System.out.println(e.getMessage());
-                                                }
-                                            } else {
-                                                Continent l_Continent = new Continent(l_CommandsArray[1], l_CommandsArray[2], d_GameMap.getContinents().size() + 1);
-                                                d_GameMap.getContinents().put(l_CommandsArray[1].toLowerCase(), l_Continent);
-                                                System.out.println("Continent " + l_CommandsArray[1] + " is successfullY added .");
-                                                d_EditStatus = true;
-                                            }
-                                        } else {
-                                            try {
-                                                throw new ValidationException("Provided continent does not exists .Try again with different continent !");
-                                            } catch (ValidationException e) {
-                                                System.out.println(e.getMessage());
-                                            }
-                                        }
-
-                                    } else {
-                                        try {
-                                            throw new ValidationException();
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    }
-                                }catch (Exception e) {
-                                    System.out.println(e.getMessage());
-                                }
-                                break;
-                            }
-                            case Constants.REMOVE: {
-                                if (l_CommandsArray.length == 2) {
-                                    
-                                    try {
-                                        HashMap<String, Continent> l_Continents = d_GameMap.getContinents();
-                                        if (!l_Continents.containsKey(l_CommandsArray[1].toLowerCase())) {
-                                            try {
-                                                throw new ValidationException("Provided Continent does not exist in map.Try Again with valid continent !");
-                                            } catch (ValidationException e) {
-                                                System.out.println(e.getMessage());
-                                            }
-                                        } else {
-                                            HashMap<String, Country> l_CountriesMap = l_Continents.get(l_CommandsArray[1].toLowerCase()).getCountries();
-                                            l_CountriesMap.clear();
-                                            l_Continents.remove(l_CommandsArray[1].toLowerCase());
-                                            System.out.println("All countries from continent " + l_CommandsArray[1] + " are successfully removed .");
-                                            System.out.println("Continent " + l_CommandsArray[1] + " is successfully removed .");
-                                            d_EditStatus = true;
-                                        }
-                                    }catch (Exception e) {
-                                        System.out.println(e.getMessage());
-                                    }
+                    case "editcountry": {
+                        switch (l_CommandArray[0]) {
+                            case "add": {
+                                if (l_CommandArray.length == 3) {
+                                    d_GameMap.addCountry(l_CommandArray[1], l_CommandArray[2]);
                                 } else {
-                                    try {
-                                        throw new ValidationException();
-                                    } catch (ValidationException e) {
-                                        System.out.println(e.getMessage());
-                                    }
+                                    throw new ValidationException();
+                                }
+                                break;
+                            }
+                            case "remove": {
+                                if (l_CommandArray.length == 2) {
+                                    d_GameMap.removeCountry(l_CommandArray[1]);
+                                } else {
+                                    throw new ValidationException();
                                 }
                                 break;
                             }
                         }
+                        break;
                     }
-                    break;
-                }
 
-                // command to edit neighbor in map
-                case Constants.EDIT_NEIGHBOUR: {
-                    switch (l_CommandsArray[0]) {
-                        case Constants.ADD: {
-                            if (l_CommandsArray.length == 3) {
-                                
-                                try {
-                                    Country l_Country1 = d_GameMap.getCountries().get(l_CommandsArray[1].toLowerCase());
-                                    Country l_Country2 = d_GameMap.getCountries().get(l_CommandsArray[2].toLowerCase());
+                    /**
+                     * Handle editneighbor command from console
+                     */
 
-                                    //handling null values
-                                    if (l_Country1 == null && l_Country2 == null) {
-                                        try {
-                                            throw new ValidationException("Provided both mentioned countries does not exist to add in map.Try Again with valid names !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else if (l_Country1 == null || l_Country2 == null) {
-                                        try {
-                                            throw new ValidationException("Provided one of the mentioned countries does not exist to add in map.Try Again with valid names !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else {
-                                        l_Country1.getNeighbours().put(l_Country2.getCountryId().toLowerCase(), l_Country2);
-                                        l_Country2.getNeighbours().put(l_Country1.getCountryId().toLowerCase(), l_Country1);
-                                        System.out.println(l_Country1.getCountryId() + " and " + l_Country2.getCountryId() + " are neighbors of each other now .");
-                                        d_EditStatus = true;
-                                    }
-                                }catch (Exception e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            } else {
-                                try {
+                    case "editneighbor": {
+                        switch (l_CommandArray[0]) {
+                            case "add": {
+                                if (l_CommandArray.length == 3) {
+                                    d_GameMap.addNeighbor(l_CommandArray[1], l_CommandArray[2]);
+                                } else {
                                     throw new ValidationException();
-                                } catch (ValidationException e) {
-                                    System.out.println(e.getMessage());
                                 }
+                                break;
                             }
-                            break;
-                        }
-                        case Constants.REMOVE: {
-                            if (l_CommandsArray.length == 3) {
-                                
-                                try {
-                                    Country l_Country1 = d_GameMap.getCountries().get(l_CommandsArray[1].toLowerCase());
-                                    Country l_Country2 = d_GameMap.getCountries().get(l_CommandsArray[2].toLowerCase());
-
-                                    //handling null values
-                                    if (l_Country1 == null && l_Country2 == null) {
-                                        try {
-                                            throw new ValidationException("Provided both mentioned countries does not exist to add in map.Try Again with valid names !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else if (l_Country1 == null || l_Country2 == null) {
-                                        try {
-                                            throw new ValidationException("Provided one of the mentioned countries does not exist to add in map.Try Again with valid names !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    } else if (l_Country1.getNeighbours().containsKey(l_Country2.getCountryId().toLowerCase()) && l_Country2.getNeighbours().containsKey(l_Country1.getCountryId().toLowerCase())) {
-                                        l_Country1.getNeighbours().remove(l_Country2.getCountryId().toLowerCase());
-                                        l_Country2.getNeighbours().remove(l_Country1.getCountryId().toLowerCase());
-                                        System.out.println("Neighbour " + l_Country2.getCountryId() + " is successfullY removed .");
-                                        d_EditStatus = true;
-                                    } else {
-                                        try {
-                                            throw new ValidationException("Provided mentioned countries are not neighbors of each other.Try Again with neighboring countries !");
-                                        } catch (ValidationException e) {
-                                            System.out.println(e.getMessage());
-                                        }
-                                    }
-                                }catch (Exception e) {
-                                    System.out.println(e.getMessage());
-                                }
-                            }
-                            else {
-                                try {
+                            case "remove": {
+                                if (l_CommandArray.length == 3) {
+                                    d_GameMap.removeNeighbor(l_CommandArray[1], l_CommandArray[2]);
+                                } else {
                                     throw new ValidationException();
-                                } catch (ValidationException e) {
-                                    System.out.println(e.getMessage());                                    }
+                                }
+                                break;
                             }
-                            break;
                         }
+                        break;
                     }
-                    break;
-                }
 
-                // command to validate map
-                case Constants.VALIDATE_MAP: {
-                    MapValidator l_MapValidator=new MapValidator();
-                    if (l_MapValidator.validateMapObject(d_GameMap)) {
-                        System.out.println("Map Validation successful");
-                        d_EditStatus =true;
-                    } else {
-                        System.out.println("Map Validation failed ! check the provided inputs again.");
+
+                    // Handle showmap command from console
+                    case "showmap": {
+                        d_GameMap.showMap();
+                        break;
                     }
-                    break;
-                }
-
-                // command to save map
-                case Constants.SAVE_MAP: {
-                    MapValidator l_MapValidator=new MapValidator();
-                    if(!Objects.equals(l_CommandsArray[0], "savemap")){
-                        if (l_MapValidator.validateMapObject(d_GameMap)) {
-                            new SaveMapController(d_GameMap, l_CommandsArray[0]).saveMap();
-                            System.out.println("Map Validation successful,Saving the map");
-                            d_EditStatus =true;
-                            break;
+                    //Handle validatemap command from console
+                    case "validatemap": {
+                        if (MapValidation.validateMap(d_GameMap, 0)) {
+                            d_Logger.log("Validation successful");
                         } else {
-                            System.out.println("Map Validation failed ! check the provided inputs again.");
+                            d_Logger.log("Validation failed");
                         }
+                        break;
                     }
-                    break;
+
+
+                    //Handle savemap command from console
+                    case "savemap": {
+                        if (l_CommandArray.length == 1) {
+                            d_GameMap.setName(l_CommandArray[0]);
+                            d_Logger.log(" Which format do you want to save the file? Type the number.");
+                            d_Logger.log("1. Domination map \n2. Conquest map");
+                            Scanner l_Scanner = new Scanner(System.in);
+                            String l_UserInput = l_Scanner.nextLine();
+                            if (l_UserInput.equals("1")){
+                                d_GameMap.saveMap(false);
+                                d_Logger.log("The loaded file is of the format Domination map");
+                            }
+                            else if (l_UserInput.equals("2")) {
+                                d_GameMap.saveMap(true);
+                                d_Logger.log("The loaded file is of the format Conquest map");
+                            }
+                            else
+                                d_Logger.log("Please enter the right value");
+
+                        }
+                        break;
+                    }
+
+
+                    //Handle editmap command from console
+                    case "editmap": {
+                        if (l_CommandArray.length == 1) {
+                            MapReader.readMap(d_GameMap, l_CommandArray[0]);
+                        }
+                        break;
+                    }
+
+
+                    //To exit the map creation phase type "exit"
+                    case "exit": {
+                        d_GameMap.flushGameMap();
+                        d_GameMap.setGamePhase(d_NextState);
+                        return p_GamePhase.nextState(d_NextState);
+                    }
+                    //Print the commands for help
+                    default: {
+                        d_Logger.log("List of user map creation commands from console:");
+                        d_Logger.log("To add or remove a continent : editcontinent -add continentID continentvalue -remove continentID");
+                        d_Logger.log("To add or remove a country : editcountry -add countryID continentID -remove countryID");
+                        d_Logger.log("To add or remove a neighbor to a country : editneighbor -add countryID neighborcountryID -remove countryID neighborcountryID");
+                        d_Logger.log("-----------------------------------------------------------------------------------------");
+                        d_Logger.log("Map Commands(Edit/Save)");
+                        d_Logger.log("To edit map: editmap filename");
+                        d_Logger.log("To save map: savemap filename");
+                        d_Logger.log("-----------------------------------------------------------------------------------------");
+                        d_Logger.log("Additional map commands:");
+                        d_Logger.log("To show the map: showmap");
+                        d_Logger.log("To validate map: validatemap");
+                        d_Logger.log("-----------------------------------------------------------------------------------------");
+
+                    }
                 }
-                default:
-                    break;
             }
         }
-        return p_CurrentGamePhase.nextState(GamePhase.StartUp);
     }
 
-
     /**
-     * This method validates the given command
+     * This method validates to check if the current cli command is executable
+     * in the current phase
      *
      * @param p_InputList the command list from console
-     * @return true if command is available in the commands list else false
+     * @return true if command is executable else false
      */
-    public boolean validateUserInput(List<String> p_InputList) {
-        if (!(p_InputList.isEmpty())) {
-            String l_InputCommand = p_InputList.getFirst();
-            int l_Index= d_MAP_CLI_COMMANDS.indexOf(l_InputCommand);
-            return l_Index != -1;
+    public boolean inputValidator(List<String> p_InputList) {
+        if (p_InputList.size() > 0) {
+            String l_MainCommand = p_InputList.get(0);
+            if (p_InputList.size() == 1) {
+                p_InputList.add("dummy");
+            }
+            return CLI_COMMANDS.contains(l_MainCommand.toLowerCase());
         }
         return false;
     }
-
-    /**
-     * This method will fetch the user inserted input.
-     * @return list of user input
-     */
-    public List<String> fetchUserInput()
-    {
-        String l_UserInput = d_Sc.nextLine();
-        List<String> l_List = new ArrayList<>();
-        if (!(l_UserInput.contains("-"))){
-            //adding values that are not for editing
-            l_List.addAll(Arrays.asList(l_UserInput.toLowerCase().split(" ")));
-        }
-        else {
-            //adding values that are for editing
-            String[] l_Strings=l_UserInput.split(" ",2);
-            for(int l_Pos=0;l_Pos<l_Strings.length;l_Pos++){
-                if (!l_Strings[l_Pos].isEmpty()) {
-                    l_List.add(l_Strings[l_Pos].trim());
-                }
-            }
-        }
-        return l_List;
-    }
-
-    /**
-     * Starts the game controller.
-     *
-     * @param p_CurrentPhase The current phase of the game.
-     * @return The next phase of the game.
-     */
-    @Override
-    public GamePhase start(GamePhase p_CurrentPhase) throws Exception{
-        d_GameEventLogger.logEvent(Constants.MAP_EDITOR_PHASE);
-        return run(p_CurrentPhase); }
 
 }
