@@ -1,167 +1,162 @@
 package org.team21.game.models.map;
 
-import org.team21.game.models.game_play.Player;
-import org.team21.game.utils.logger.GameEventLogger;
+import org.team21.game.game_engine.GamePhase;
+import org.team21.game.models.strategy.player.PlayerStrategy;
+import org.team21.game.utils.*;
+import org.team21.game.utils.logger.LogEntryBuffer;
 
+import java.io.IOException;
+import java.io.Serializable;
 import java.util.*;
+import java.util.stream.Collectors;
+
 
 /**
- * Map class holds the details of map in the game
- * Consists of data structures to access countries and continents and their neighbours of the map
+ * Concrete Class to set and get all the properties of the GameMap.
  *
- * @author Tejasvi
- * @author Kapil Soni
- * @version 1.0.1
+ * @author Neona Pinto
+ * @author Dhananjay Narayan
+ * @author Surya Manian
+ * @author Madhuvanthi Hemanathan
+ * @author Prathika Suvarna
+ * @version 1.0.0
  */
-public class GameMap {
-
+public class GameMap implements Serializable {
     /**
-     * Singleton Instance of Game map which will be
-     * used by all the controllers
+     * Serial ID
      */
-    private static GameMap d_GameMap_Single_Instance = null;
+    private static final long serialVersionUID = 45443434343L;
     /**
-     * Map Names
+     * An object of the gamemap
      */
-    private String d_MapName;
+    private static GameMap d_GameMap;
     /**
-     * Is Map valid or not
+     * Gamephase object
      */
-    private boolean d_IsValid;
+    private GamePhase d_GamePhase;
     /**
-     * Continents of map
+     * A hashmap to store the continents
      */
-    private HashMap<String, Continent> d_Continents;
+    private HashMap<String, Continent> d_Continents = new HashMap<>();
     /**
-     * Countries in map
+     * A hashmap to store the countries
      */
-    private HashMap<String, Country> d_Countries;
+    private HashMap<String, Country> d_Countries = new HashMap<>();
     /**
-     * Players in entire map
+     * A hashmap to store the players
      */
     private HashMap<String, Player> d_Players = new HashMap<>();
     /**
-     * Created object d_GameEventLogger of GameEventLogger.
+     * A string to store the name
      */
-    GameEventLogger d_GameEventLogger = new GameEventLogger();
+    private String d_Name;
     /**
-     * Map Constructor to initialise the Class
+     * A string to store the error message
      */
-    public GameMap() {
-        this.d_MapName = "";
-        this.d_IsValid = false;
-        this.d_Continents = new HashMap<>();
-        this.d_Countries = new HashMap<>();
-    }
-
+    private String d_ErrorMessage;
 
     /**
-     * Map Constructor to initialise the class
-     *
-     * @param p_MapName Map name parameter
+     * LogEntry Buffer Instance
      */
-    public GameMap(String p_MapName) {
-        this.d_MapName = p_MapName;
-        this.d_IsValid = false;
-        this.d_Continents = new HashMap<>();
-        this.d_Countries = new HashMap<>();
-    }
+    private LogEntryBuffer d_Logger = LogEntryBuffer.getInstance();
 
     /**
-     * Gets instance.
-     *
-     * @return Singleton Instance of Map
+     * Winner
      */
-    public static synchronized GameMap getInstance() {
-        if (d_GameMap_Single_Instance == null)
-            d_GameMap_Single_Instance = new GameMap();
-
-        return d_GameMap_Single_Instance;
-    }
+    private Player d_Winner;
 
     /**
-     * Getter Function for the map name
-     *
-     * @return the name of the Map
+     * number of tries
      */
-    public String getMapName() {
-        return this.d_MapName;
+    private int d_Tries;
+
+    /**
+     * Current Player
+     */
+    private Player d_CurrentPlayer;
+
+
+    /**
+     * If the game has loaded
+     */
+    private Boolean d_GameLoaded = false;
+
+    /**
+     * Default Constructor
+     */
+    private GameMap() {
     }
 
     /**
-     * Setter function of the map name
+     * Method to get instance of Game map class
      *
-     * @param p_MapName function argument, means map name to be set
+     * @return the class object
      */
-    public void setMapName(String p_MapName) {
-        this.d_MapName = p_MapName;
+    public static GameMap getInstance() {
+        if (Objects.isNull(d_GameMap)) {
+            d_GameMap = new GameMap();
+        }
+        return d_GameMap;
     }
 
     /**
-     * Getter function of the d_isValid
+     * To get the current phase
      *
-     * @return True /false if the map is valid or not
+     * @return gamephase instance
      */
-    public boolean getIsValid() {
-        return this.d_IsValid;
+    public GamePhase getGamePhase() {
+        return d_GamePhase;
     }
 
     /**
-     * Setter function for if the map is valid
+     * Set the current phase
      *
-     * @param p_IsValid function argument to set the d_isValid data-member
+     * @param d_GamePhase gamephase instance
      */
-    public void setIsValid(boolean p_IsValid) {
-        this.d_IsValid = p_IsValid;
+    public void setGamePhase(GamePhase d_GamePhase) {
+        this.d_GamePhase = d_GamePhase;
     }
 
     /**
-     * Getter function to get the hashmap of the continents in that map
+     * Get the list of all the continents
      *
-     * @return hashmap of the continents
+     * @return d_Continents List of the continents
      */
     public HashMap<String, Continent> getContinents() {
-        return this.d_Continents;
+        return d_Continents;
     }
 
     /**
-     * Setter function to set the continents of the map in a hashmap
+     * Get a single continent
      *
-     * @param p_Continents function argument of hashmap of continents to be set
+     * @param p_Id Unique Continent name
+     * @return the required Continent object
      */
-    public void setContinents(HashMap<String, Continent> p_Continents) {
-        this.d_Continents = p_Continents;
+    public Continent getContinent(String p_Id) {
+        return d_Continents.get(p_Id);
     }
 
+
     /**
-     * Getter method to return HashMap maintaining the list of countries in the map.
+     * Get the list of countries
      *
-     * @return return HashMap
+     * @return d_Countries List of the countries
      */
     public HashMap<String, Country> getCountries() {
-        return this.d_Countries;
+        return d_Countries;
     }
 
+
     /**
-     * Setter method to set the d_countries HashMap to the given HashMap parameter.
+     * Get a single country
      *
-     * @param p_Countries HashMap for d_countries
+     * @param p_Id Unique Country name
+     * @return the required Country object
      */
-    public void setCountries(HashMap<String, Country> p_Countries) {
-        this.d_Countries = p_Countries;
+    public Country getCountry(String p_Id) {
+        return d_Countries.get(p_Id);
     }
 
-    /**
-     * Clear map.
-     */
-    public void clearMap() {
-        this.setMapName("");
-        this.setPlayers(new HashMap<>());
-        this.setCountries(new HashMap<>());
-        this.setContinents(new HashMap<>());
-        this.setIsValid(false);
-        this.setPlayer(new Player());
-    }
 
     /**
      * Get the list of players
@@ -169,16 +164,7 @@ public class GameMap {
      * @return d_Players List of players
      */
     public HashMap<String, Player> getPlayers() {
-        return this.d_Players;
-    }
-
-    /**
-     * Set The HashMap of Players
-     *
-     * @param p_Players Players HashMap
-     */
-    public void setPlayers(HashMap<String, Player> p_Players) {
-        this.d_Players = p_Players;
+        return d_Players;
     }
 
     /**
@@ -192,78 +178,492 @@ public class GameMap {
     }
 
     /**
-     * Add Player to the Players Hashmap
+     * Method to get error message.
      *
-     * @param p_Player Player Object to set the Player
+     * @return d_ErrorMessage - the error message set up
      */
-    public void setPlayer(Player p_Player) {
-        this.d_Players.put(p_Player.getName().toLowerCase(), p_Player);
+    public String getErrorMessage() {
+        return d_ErrorMessage;
+    }
+
+    /**
+     * Method to set the error message.
+     *
+     * @param p_ErrorMessage - the actual error
+     */
+    public void setErrorMessage(String p_ErrorMessage) {
+        this.d_ErrorMessage = p_ErrorMessage;
+    }
+
+    /**
+     * Returns the name of the map.
+     *
+     * @return The map name
+     */
+    public String getName() {
+        return d_Name;
+    }
+
+    /**
+     * Sets the map name
+     *
+     * @param p_Name the map name
+     */
+    public void setName(String p_Name) {
+        this.d_Name = p_Name;
+    }
+
+    /**
+     * Get the current Player
+     *
+     * @return player
+     */
+    public Player getCurrentPlayer() {
+        return d_CurrentPlayer;
+    }
+
+    /**
+     * Set the current Player
+     *
+     * @param d_CurrentPlayer player
+     */
+    public void setCurrentPlayer(Player d_CurrentPlayer) {
+        this.d_CurrentPlayer = d_CurrentPlayer;
+    }
+
+    /**
+     * Get the game loaded status
+     *
+     * @return true if game is loaded
+     */
+    public Boolean getGameLoaded() {
+        return d_GameLoaded;
+    }
+
+    /**
+     * set the game loaded status
+     *
+     * @param d_GameLoaded loaded status
+     */
+    public void setGameLoaded(Boolean d_GameLoaded) {
+        this.d_GameLoaded = d_GameLoaded;
+    }
+
+    /**
+     * Method to set the Game map object back to empty after
+     * each phase.
+     */
+    public void flushGameMap() {
+        GameMap.getInstance().getContinents().clear();
+        GameMap.getInstance().getCountries().clear();
+        GameMap.getInstance().getPlayers().clear();
+    }
+
+    /**
+     * Adds the continent to the map's continent list.
+     *
+     * @param p_ContinentName Continent name
+     * @param p_ControlValue  Continent control value
+     * @throws ValidationException if any input or output issue
+     */
+    public void addContinent(String p_ContinentName, String p_ControlValue) throws ValidationException {
+        if (this.getContinents().containsKey(p_ContinentName)) {
+            throw new ValidationException("Continent already exists");
+        }
+        Continent l_Continent = new Continent();
+        l_Continent.setName(p_ContinentName);
+        l_Continent.setAwardArmies(Integer.parseInt(p_ControlValue));
+        this.getContinents().put(p_ContinentName, l_Continent);
+        d_Logger.log("Successfully added Continent: " + p_ContinentName);
+    }
+
+    /**
+     * Adds country to the map's country list and continent's
+     * country list.
+     *
+     * @param p_CountryName   Country name
+     * @param p_ContinentName Continent name
+     * @throws ValidationException if any input or output issue
+     */
+    public void addCountry(String p_CountryName, String p_ContinentName) throws ValidationException {
+
+        if (this.getCountries().containsKey(p_CountryName)) {
+            throw new ValidationException("Country already exist");
+        }
+        Country l_Country = new Country();
+        l_Country.setName(p_CountryName);
+        l_Country.setContinent(p_ContinentName);
+        this.getCountries().put(p_CountryName, l_Country);
+        this.getContinent(p_ContinentName).getCountries().add(l_Country);
+        d_Logger.log("Successfully added Country: " + p_CountryName);
+    }
+
+    /**
+     * Removes continent from the map's continent list and its
+     * respective countries
+     *
+     * @param p_ContinentName Continent name
+     * @throws ValidationException if any input/output issue
+     */
+    public void removeContinent(String p_ContinentName) throws ValidationException {
+
+        if (!this.getContinents().containsKey(p_ContinentName)) {
+            throw new ValidationException("Continent does not exist");
+        }
+        Set<String> l_CountrySet = this.getContinents().remove(p_ContinentName)
+                .getCountries()
+                .stream().map(Country::getName)
+                .collect(Collectors.toSet());
+        for (String l_CountryName : l_CountrySet) {
+            this.getCountries().remove(l_CountryName);
+        }
+        d_Logger.log("Successfully deleted the continent: " + p_ContinentName);
+    }
+
+    /**
+     * Removes country from the map's country list and continent's
+     * country list.
+     *
+     * @param p_CountryName Country name
+     * @throws ValidationException if any input/output issue
+     */
+    public void removeCountry(String p_CountryName) throws ValidationException {
+        Country l_Country = this.getCountry(p_CountryName);
+        if (Objects.isNull(l_Country)) {
+            throw new ValidationException("Country does not exist: " + p_CountryName);
+        }
+        this.getContinent(l_Country.getContinent()).getCountries().remove(l_Country);
+        this.getCountries().remove(l_Country.getName());
+        d_Logger.log("Successfully deleted the country");
+    }
+
+    /**
+     * Adds the neighbor to particular country
+     *
+     * @param p_CountryName         Country name
+     * @param p_NeighborCountryName Neighbor country name
+     * @throws ValidationException if any input/output issue
+     */
+    public void addNeighbor(String p_CountryName, String p_NeighborCountryName) throws ValidationException {
+        Country l_Country1 = this.getCountry(p_CountryName);
+        Country l_Country2 = this.getCountry(p_NeighborCountryName);
+        if (Objects.isNull(l_Country1) || Objects.isNull(l_Country2)) {
+            throw new ValidationException("Atleast one of the mentioned Countries does not exist");
+        }
+        l_Country1.getNeighbors().add(l_Country2);
+        d_Logger.log(String.format("Successfully connected routes between mentioned Countries: %s - %s", p_CountryName, p_NeighborCountryName));
+    }
+
+
+    /**
+     * Removes neighbor to a particular country
+     *
+     * @param p_CountryName         Country name
+     * @param p_NeighborCountryName Neighbor country name
+     * @throws ValidationException if any input/output issue
+     */
+    public void removeNeighbor(String p_CountryName, String p_NeighborCountryName) throws ValidationException {
+        Country l_Country1 = this.getCountry(p_CountryName);
+        Country l_Country2 = this.getCountry(p_NeighborCountryName);
+        if (Objects.isNull(l_Country1)) {
+            throw new ValidationException("Atleast one of the mentioned Countries does not exist");
+        } else if (!l_Country1.getNeighbors().contains(l_Country2) || !l_Country2.getNeighbors().contains(l_Country1)) {
+            throw new ValidationException("Mentioned Countries are not neighbors");
+        } else {
+            this.getCountry(p_CountryName).getNeighbors().remove(l_Country2);
+            d_Logger.log(String.format("Successfully removed routes between mentioned Countries: %s - %s\n", p_CountryName, p_NeighborCountryName));
+        }
     }
 
     /**
      * Adds player to the game map.
      *
      * @param p_PlayerName Player name
+     * @throws ValidationException if any input/output issue
      */
-    public void addPlayer(String p_PlayerName) {
+    public void addPlayer(String p_PlayerName) throws ValidationException {
         if (this.getPlayers().containsKey(p_PlayerName)) {
-            System.out.println("Player already exists");
-            return;
+            throw new ValidationException("Player already exists");
         }
-        Player l_Player = new Player();
+        Player l_Player = new Player(PlayerStrategy.getStrategy("human"));
         l_Player.setName(p_PlayerName);
         this.getPlayers().put(p_PlayerName, l_Player);
-        System.out.println("Successfully added Player: " + p_PlayerName);
-        d_GameEventLogger.logEvent("Successfully added Player: " + p_PlayerName);
+        d_Logger.log("Successfully added Player: " + p_PlayerName);
+    }
+
+    /**
+     * Adds player to the game map.
+     *
+     * @param p_PlayerName Player name
+     * @param p_Strategy   Player Strategy
+     * @throws ValidationException if any input/output issue
+     */
+    public void addPlayer(String p_PlayerName, String p_Strategy) throws ValidationException {
+        if (this.getPlayers().containsKey(p_PlayerName)) {
+            throw new ValidationException("Player already exists");
+        }
+        Player l_Player = new Player(PlayerStrategy.getStrategy(p_Strategy));
+        l_Player.setName(p_PlayerName);
+        this.getPlayers().put(p_PlayerName, l_Player);
+        d_Logger.log("Successfully added Player: " + p_PlayerName);
     }
 
     /**
      * Removes player from game map.
      *
      * @param p_PlayerName Player name
+     * @throws ValidationException if any input/output issue
      */
-    public void removePlayer(String p_PlayerName) {
+    public void removePlayer(String p_PlayerName) throws ValidationException {
         Player l_Player = this.getPlayer(p_PlayerName);
         if (Objects.isNull(l_Player)) {
-            System.out.println("Player not found : " + p_PlayerName);
-            return;
+            throw new ValidationException("Player does not exist: " + p_PlayerName);
         }
         this.getPlayers().remove(l_Player.getName());
-        System.out.println("Successfully deleted the player: " + p_PlayerName);
-        d_GameEventLogger.logEvent("Successfully deleted the player: " + p_PlayerName);
+        d_Logger.log("Successfully deleted the player: " + p_PlayerName);
     }
 
     /**
-     * Get a single continent
+     * Saves map as a file, if valid with the specified name.
      *
-     * @param p_Id Unique Continent name
-     * @return the required Continent object
+     * @param p_saveAsConquest to get user input
+     * @throws ValidationException files exception of correctness
+     * @throws IOException         files exception of correctness
      */
-    public Continent getContinent(String p_Id) {
-        return d_Continents.get(p_Id);
+    public void saveMap(boolean p_saveAsConquest) throws ValidationException, IOException {
+        //Ask p_size for minimum number of countries based on player
+        if (MapValidation.validateMap(d_GameMap, 0)) {
+            DominationMap l_SaveMap = p_saveAsConquest ? new Adapter(new Adaptee()) : new DominationMap();
+            boolean l_Bool = true;
+            while (l_Bool) {
+                d_GameMap.getName();
+                if (Objects.isNull(d_GameMap.getName()) || d_GameMap.getName().isEmpty()) {
+                    throw new ValidationException("Please enter the file name:");
+                } else {
+                    if (l_SaveMap.saveMap(d_GameMap, d_GameMap.getName())) {
+                        d_Logger.log("The map has been validated and is saved.");
+                    } else {
+                        throw new ValidationException("Map name already exists, enter different name.");
+                    }
+                    l_Bool = false;
+                }
+            }
+        } else {
+            throw new ValidationException("Invalid Map, can not be saved.");
+        }
     }
 
     /**
-     * Assign countries.
+     * Assign countries to each player of the game in random.
      */
     public void assignCountries() {
-        int playerIndex = 0;
-        List<Player> l_Players = d_GameMap_Single_Instance.getPlayers().values().stream().toList();
-        try {
-            List<Country> l_CountryList = new ArrayList<>(d_GameMap_Single_Instance.getCountries().values());
+        int l_PlayerIndex = 0;
+        List<Player> l_Players = d_GameMap.getPlayers().values().stream().collect(Collectors.toList());
 
-            Collections.shuffle(l_CountryList);
+        List<Country> l_CountryList = d_GameMap.getCountries().values().stream().collect(Collectors.toList());
+        Collections.shuffle(l_CountryList);
+        for (Country l_Country : l_CountryList) {
+            Player l_Player = l_Players.get(l_PlayerIndex);
+            l_Player.getCapturedCountries().add(l_Country);
+            l_Country.setPlayer(l_Player);
+            d_Logger.log(l_Country.getName() + " Assigned to " + l_Player.getName());
 
-            for (Country country : l_CountryList) {
-                Player l_Player = l_Players.get(playerIndex);
-                l_Player.getCapturedCountries().add(country);
-                country.setPlayer(l_Player);
-                System.out.println(country.getCountryId() + " assigned to " + l_Player.getName());
-                d_GameEventLogger.logEvent(country.getCountryId() + " assigned to " + l_Player.getName());
-                playerIndex = (playerIndex + 1) % l_Players.size(); // Move to the next player in a circular manner
+            if (l_PlayerIndex < d_GameMap.getPlayers().size() - 1) {
+                l_PlayerIndex++;
+            } else {
+                l_PlayerIndex = 0;
             }
-        }catch (Exception e) {
-            System.out.println(e.getMessage());
+        }
+    }
+
+
+    /**
+     * A function to display the map chosen, its continents, countries, neighbours,
+     * players and their ownership
+     */
+
+    public void showMap() {
+        d_Logger.log("\nShowing the Map Details : \n");
+
+        // Showing Continents in Map
+        d_Logger.log("\nThe Continents in this Map are : \n");
+        Iterator<Map.Entry<String, Continent>> l_IteratorForContinents = d_GameMap.getContinents().entrySet()
+                .iterator();
+
+        String l_Table = "|%-18s|%n";
+
+        System.out.format("+------------------+%n");
+        System.out.format("| Continent's name |%n");
+        System.out.format("+------------------+%n");
+
+        while (l_IteratorForContinents.hasNext()) {
+            Map.Entry<String, Continent> continentMap = l_IteratorForContinents.next();
+            String l_ContinentId = (String) continentMap.getKey();
+            Continent l_Continent = d_GameMap.getContinents().get(l_ContinentId); //Get the particular continent by its ID(Name)
+
+            System.out.format(l_Table, l_Continent.getName());
+        }
+        System.out.format("+------------------+%n");
+
+
+        // Showing Countries in the Continent and their details
+        d_Logger.log("\nThe countries in this Map and their details are : \n");
+
+        Iterator<Map.Entry<String, Continent>> l_IteratorForContinent = d_GameMap.getContinents().entrySet()
+                .iterator();
+
+        l_Table = "|%-23s|%-18s|%-60s|%n";
+
+        System.out.format(
+                "+--------------+-----------------------+------------------+----------------------------+---------------+-%n");
+        System.out.format(
+                "     Country's name     | Continent's Name |   Neighbour Countries                                      |%n");
+        System.out.format(
+                "+--------------+-----------------------+------------------+----------------------------+----------------+%n");
+
+
+        while (l_IteratorForContinent.hasNext()) {
+            Map.Entry<String, Continent> l_ContinentMap = (Map.Entry<String, Continent>) l_IteratorForContinent.next();
+            String l_ContinentId = (String) l_ContinentMap.getKey();
+            Continent l_Continent = d_GameMap.getContinents().get(l_ContinentId);
+            Iterator<Country> l_ListIterator = l_Continent.getCountries().iterator();
+
+            while (l_ListIterator.hasNext()) {
+
+                Country l_Country = (Country) l_ListIterator.next();
+                System.out.format(l_Table, l_Country.getName(), l_Continent.getName(), l_Country.createANeighborList(l_Country.getNeighbors()), l_Country.getArmies());
+            }
+        }
+
+        System.out.format(
+                "+--------------+-----------------------+------------------+----------------------------+----------------+%n");
+
+
+        HashMap<String, Player> l_Players = d_GameMap.getPlayers();
+        d_Logger.log("\nPlayers in this game if the game has started are : ");
+        if (l_Players != null) {
+            l_Players.forEach((key, value) -> d_Logger.log(key));
+            d_Logger.log("");
+        }
+
+        //Showing the Ownership of the players
+        d_Logger.log("The Map ownership of the players are : ");
+
+
+        System.out.format("+---------------+-------------------------------+%n");
+        System.out.format("| Player's name |    Continent's Controlled    |%n");
+        System.out.format("+---------------+-------------------------------+%n");
+
+        String l_Table1 = "|%-15s|%-30s|%n";
+
+
+        for (Player l_Player : d_GameMap.getPlayers().values()) {
+            System.out.format(l_Table1, l_Player.getName(), l_Player.createACaptureList(l_Player.getCapturedCountries()), l_Player.getReinforcementArmies());
+        }
+
+        System.out.format("+---------------+-------------------------------+%n");
+
+    }
+
+    /**
+     * method to get tries
+     *
+     * @return number of tries
+     */
+    public int getTries() {
+        return d_Tries;
+    }
+
+    /**
+     * method to set number of tries
+     *
+     * @param p_Tries number of tries
+     */
+    public void setTries(int p_Tries) {
+        d_Tries = p_Tries;
+    }
+
+    /**
+     * method to to go to next turn
+     */
+    public void nextTry() {
+        d_Tries++;
+    }
+
+    /**
+     * method to get winner
+     *
+     * @return the winner
+     */
+    public Player getWinner() {
+        return d_Winner;
+    }
+
+    /**
+     * method to set winner
+     *
+     * @param p_Winner the winner
+     */
+    public void setWinner(Player p_Winner) {
+        d_Winner = p_Winner;
+    }
+
+    /**
+     * Builder for setting the progress
+     *
+     * @param p_GameMap instance
+     * @return GamePhase
+     * @throws ValidationException Validation exception
+     */
+    public GamePhase gamePlayBuilder(GameMap p_GameMap) throws ValidationException {
+        this.flushGameMap();
+        d_GameMap.setGameLoaded(true);
+        for (Map.Entry<String, Continent> l_Continent : p_GameMap.getContinents().entrySet()) {
+            this.addContinent(l_Continent.getKey(), String.valueOf(l_Continent.getValue().getAwardArmies()));
+        }
+        for (Map.Entry<String, Country> l_Country : p_GameMap.getCountries().entrySet()) {
+            this.addCountry(l_Country.getKey(), l_Country.getValue().getContinent());
+        }
+        for (Continent l_Continent : p_GameMap.getContinents().values()) {
+            for (Country l_Country : l_Continent.getCountries()) {
+                for (Country l_Neighbour : l_Country.getNeighbors()) {
+                    p_GameMap.addNeighbor(l_Country.getName(), l_Neighbour.getName());
+                }
+            }
+        }
+        for (Map.Entry<String, Player> l_Player : p_GameMap.getPlayers().entrySet()) {
+            this.addPlayer(l_Player.getKey());
+            this.getPlayer(l_Player.getKey()).setCapturedCountries(l_Player.getValue().getCapturedCountries());
+            this.getPlayer(l_Player.getKey()).setReinforcementArmies(l_Player.getValue().getReinforcementArmies());
+        }
+        this.setGamePhase(p_GameMap.getGamePhase());
+        this.setCurrentPlayer(p_GameMap.getCurrentPlayer());
+        for (Map.Entry<String, Player> l_Player : p_GameMap.getPlayers().entrySet()) {
+            this.getPlayer(l_Player.getKey()).setOrders(l_Player.getValue().getOrders());
+            this.getPlayer(l_Player.getKey()).setPlayerCards(l_Player.getValue().getPlayerCards());
+        }
+        return p_GameMap.getGamePhase();
+    }
+
+    /**
+     * Returns new instance of gamemap
+     *
+     * @return instance of gamemap
+     */
+    public static GameMap newInstance() {
+        GameMap l_GameMap = d_GameMap;
+        if (Objects.nonNull(l_GameMap)) {
+            l_GameMap.d_GamePhase = null;
+            l_GameMap.d_Name = "";
+            l_GameMap.d_ErrorMessage = "";
+            l_GameMap.d_Winner = null;
+            l_GameMap.d_Tries = 0;
+            l_GameMap.d_CurrentPlayer = null;
+            l_GameMap.d_GameLoaded = false;
+            l_GameMap.flushGameMap();
+            return d_GameMap;
+        } else {
+            return getInstance();
         }
     }
 }
